# weather_app

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
static/css/: styles.css
weather/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/weather/: base.html  by_city.html  by_coordinates.html  forecast.html  history.html  home.html  login.html  register.html
