[tool.poetry]
name = "weather-app"
version = "0.1.0"
description = ""
authors = ["JaguarKovalev <jaguarkovalev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
